src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area of Interest</label>
        <referenceTo>Area_of_Interest__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Acquired__c</fullName>
        <label>Percent Acquired</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00}</displayFormat>
        <label>Roll no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Marks_rule</fullName>
        <active>true</active>
        <errorConditionFormula>(Marks__c  &lt; 0 )  ||   (Marks__c  &gt; 700)</errorConditionFormula>
        <errorDisplayField>Marks__c</errorDisplayField>
        <errorMessage>Enter valid marks. Marks should be out of 700.</errorMessage>
    </validationRules>
</CustomObject>